[gd_scene load_steps=20 format=4 uid="uid://bn8vr57qtrfoa"]

[ext_resource type="Script" path="res://Scripts/state_panel.gd" id="1_0qvwv"]
[ext_resource type="Texture2D" uid="uid://bnpr0sdc88wx5" path="res://Assets/SpaceShooterAssetPack/SpaceShooterAssets/SpaceShooterAssetPack_IU.png" id="3_av3yd"]
[ext_resource type="AudioStream" uid="uid://by547uhvlp22q" path="res://Assets/Sounds/Repair_Sound_test.mp3" id="4_msnnj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2sloo"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_uf2ak"]
texture = ExtResource("3_av3yd")
texture_margin_left = 2.0
texture_margin_top = 2.0
texture_margin_right = 2.0
texture_margin_bottom = 2.0
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0
region_rect = Rect2(0, 16, 16, 16)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iksji"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="Animation" id="Animation_lo6bp"]
resource_name = "Block_View"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Minigames:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -48), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../MinigameStart_Particles:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [false, true, true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../MinigameStart_Particles:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(48, 0), Vector2(48, 47)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../MinigameStart_Particles2:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, false, true]
}

[sub_resource type="Animation" id="Animation_2qj2u"]
resource_name = "End_Minigame"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Minigames:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -48)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../MinigameStart_Particles:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.333333, 0.733333, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [false, true, true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../MinigameStart_Particles:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(64, 48), Vector2(64, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../MinigameStart_Particles2:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.433333, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, false]
}

[sub_resource type="Animation" id="Animation_povnw"]
resource_name = "Focus"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("NinePatchRect:size")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(96, 48), Vector2(94, 46)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("NinePatchRect:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_4fxuj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("NinePatchRect:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(96, 48)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("NinePatchRect:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Minigames:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -49)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../MinigameStart_Particles:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../MinigameStart_Particles:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(64, 48)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../MinigameStart_Particles2:emitting")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath(".:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Minigames:rotation")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_af8o7"]
resource_name = "Start_Minigame"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Minigames:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -48), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../MinigameStart_Particles:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [false, true, true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../MinigameStart_Particles:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(64, 0), Vector2(64, 48)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../MinigameStart_Particles2:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kcqij"]
_data = {
"Block_View": SubResource("Animation_lo6bp"),
"End_Minigame": SubResource("Animation_2qj2u"),
"Focus": SubResource("Animation_povnw"),
"RESET": SubResource("Animation_4fxuj"),
"Start_Minigame": SubResource("Animation_af8o7")
}

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_r7f4a"]
texture = ExtResource("3_av3yd")
0:2/0 = 0
0:3/0 = 0
1:2/0 = 0
1:3/0 = 0

[sub_resource type="TileSet" id="TileSet_kcoi6"]
sources/0 = SubResource("TileSetAtlasSource_r7f4a")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1cbsq"]

[sub_resource type="Curve" id="Curve_10qax"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.5, 0.5), 1.86877, 1.86877, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_kas0w"]
curve = SubResource("Curve_10qax")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_r0nk1"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(45, 1, 1)
direction = Vector3(3, 0, 0)
spread = 180.0
initial_velocity_min = 10.0
initial_velocity_max = 10.0
gravity = Vector3(0, -3, 0)
radial_accel_min = 20.0
radial_accel_max = 20.0
scale_max = 3.0
color = Color(0.568973, 0.568973, 0.568973, 1)
alpha_curve = SubResource("CurveTexture_kas0w")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_txwoe"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(45, 1, 1)
direction = Vector3(0, -10, 0)
spread = 90.0
initial_velocity_min = 30.0
initial_velocity_max = 30.0
gravity = Vector3(0, 60, 0)
radial_accel_min = 5.0
radial_accel_max = 5.0
scale_max = 3.0
color = Color(0.703807, 0.703808, 0.703808, 1)
alpha_curve = SubResource("CurveTexture_kas0w")

[node name="State_Panel" type="Control"]
custom_minimum_size = Vector2(96, 48)
layout_mode = 3
anchors_preset = 0
offset_left = -48.0
offset_top = -24.0
offset_right = 48.0
offset_bottom = 24.0
size_flags_horizontal = 3
script = ExtResource("1_0qvwv")

[node name="Bg" type="Panel" parent="."]
clip_contents = true
custom_minimum_size = Vector2(96, 48)
layout_mode = 2
offset_right = 96.0
offset_bottom = 48.0
theme_override_styles/panel = SubResource("StyleBoxFlat_2sloo")

[node name="Progress" type="ProgressBar" parent="Bg"]
modulate = Color(0.912219, 0.000463764, 0.000253457, 1)
custom_minimum_size = Vector2(0, 20)
offset_left = 81.0
offset_top = 5.0
offset_right = 91.0
offset_bottom = 43.0
theme_override_styles/background = SubResource("StyleBoxTexture_uf2ak")
theme_override_styles/fill = SubResource("StyleBoxFlat_iksji")
step = 1.0
value = 100.0
fill_mode = 3
show_percentage = false

[node name="NinePatchRect" type="NinePatchRect" parent="Bg"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_av3yd")
region_rect = Rect2(0, 16, 16, 16)
patch_margin_left = 1
patch_margin_top = 1
patch_margin_right = 1
patch_margin_bottom = 1

[node name="Name" type="Label" parent="Bg"]
layout_mode = 2
offset_left = 3.0
offset_top = 4.0
offset_right = 99.0
offset_bottom = 20.0
scale = Vector2(0.5, 0.5)
text = "STATE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="State" type="Label" parent="Bg"]
layout_mode = 2
offset_left = 3.0
offset_top = 37.0
offset_right = 69.0
offset_bottom = 53.0
scale = Vector2(0.5, 0.5)
theme_override_font_sizes/font_size = 12
text = "100%"
vertical_alignment = 1

[node name="Button_Reaction" type="AnimationPlayer" parent="Bg"]
libraries = {
"": SubResource("AnimationLibrary_kcqij")
}
autoplay = "RESET"

[node name="Minigames" type="Control" parent="Bg"]
anchors_preset = 0
offset_top = -48.0
offset_right = 96.0

[node name="Indicator" type="ColorRect" parent="Bg/Minigames"]
layout_mode = 0
offset_right = 96.0
offset_bottom = 48.0
color = Color(0.345098, 0.345098, 0.345098, 1)

[node name="Frame" type="TileMapLayer" parent="Bg/Minigames"]
tile_map_data = PackedByteArray("AAAAAAAAAAAAAAMAAHAAAAIAAAAAAAMAABABAAAAAAAAAAIAAFABAAIAAAAAAAIAAFACAAAAAAAAAAIAAFACAAIAAAAAAAIAAFADAAAAAAAAAAIAAFADAAIAAAAAAAIAAFAEAAAAAAAAAAIAAFAEAAIAAAAAAAIAAFAFAAAAAAAAAAMAACAFAAEAAAAAAAIAAAAFAAIAAAAAAAMAAAAAAAEAAAAAAAIAAAA=")
tile_set = SubResource("TileSet_kcoi6")

[node name="Button" type="Button" parent="Bg"]
layout_mode = 0
offset_right = 96.0
offset_bottom = 48.0
theme_override_font_sizes/font_size = 8
theme_override_styles/focus = SubResource("StyleBoxEmpty_1cbsq")
flat = true

[node name="MinigameStart_Particles" type="GPUParticles2D" parent="."]
position = Vector2(64, 48)
emitting = false
amount = 100
process_material = SubResource("ParticleProcessMaterial_r0nk1")

[node name="MinigameStart_Particles2" type="GPUParticles2D" parent="."]
position = Vector2(48, 51)
emitting = false
amount = 10
process_material = SubResource("ParticleProcessMaterial_txwoe")
one_shot = true
explosiveness = 1.0

[node name="Timers" type="Node" parent="."]

[node name="RandomAwaitTimer" type="Timer" parent="Timers"]
one_shot = true

[node name="CanFixTimer" type="Timer" parent="Timers"]
wait_time = 0.8
one_shot = true

[node name="Sounds" type="Node" parent="."]

[node name="RepairReadySound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("4_msnnj")
volume_db = -10.0
pitch_scale = 0.6

[connection signal="animation_finished" from="Bg/Button_Reaction" to="." method="_on_button_reaction_animation_finished"]
[connection signal="mouse_entered" from="Bg/Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Bg/Button" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="Bg/Button" to="." method="_on_button_pressed"]
[connection signal="timeout" from="Timers/RandomAwaitTimer" to="." method="_on_random_await_timer_timeout"]
[connection signal="timeout" from="Timers/CanFixTimer" to="." method="_on_can_fix_timer_timeout"]
